# MultilayerNeuralNetwork

./: CMakeLists.txt  MultilayerNeuralNetwork.pro  main.cpp
Common/: NeuroNetwork.cpp  NeuroNetwork.h
SimpleAI/: EnvironmentState.cpp  EnvironmentState.h  Result.h  TrainElement.h  Warrior.cpp  Warrior.h
